<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kagmers.master.quizapppro.science"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/science"
        android:fontFamily="cursive"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chemical_formula_of_water_is"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h2o"
            android:id="@+id/h2o"
            android:onClick="next"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/el1"
            android:text="@string/no2"
            android:onClick="noway"
            android:layout_marginLeft="25dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h2so4"
            android:onClick="noway"
            android:id="@+id/el2"
            android:layout_marginLeft="25dp" />
    </LinearLayout>
</LinearLayout>
