<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#d7cfcf"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kagmers.master.quizapppro.history"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="40sp"
        android:fontFamily="cursive"
        />
    <TextView
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/q1his"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="18dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/neil_armstrong"
            android:padding="10dp"
            android:onClick="next"
            android:id="@+id/cor"
            android:background="#ffffff"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buzz_aldrin"
            android:id="@+id/buzz"
            android:onClick="noway"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:background="#ffffff"/>
    </LinearLayout>

</LinearLayout>
