<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#4dc0c2"
    tools:context="com.kagmers.master.quizapppro.entertainment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/t1"
        android:fontFamily="cursive"
        android:textColor="#faf7f8"
        android:text="@string/entertainment"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/the_director_of_dark_knight_rises_is"
        android:textSize="25sp"
        android:layout_below="@id/t1"
        android:layout_marginTop="100dp"/>
    <LinearLayout
        android:layout_below="@id/t1"
        android:layout_marginTop="180dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chris"
            android:background="#ffffff"
            android:onClick="next"
            android:padding="10dp"
            android:text="@string/christopher_nolan"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathew_hagen"
            android:id="@+id/t2"
            android:onClick="noway"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:background="#ffffff"/>
    </LinearLayout>

</RelativeLayout>
