<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kagmers.master.quizapppro.MainActivity">
    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/science"
        android:text="@string/science"
        android:textAllCaps="false"
        android:textColor="#000"
        android:background="#ffffff"
        android:layout_centerHorizontal="true"
        android:shadowRadius="5"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:onClick="scie"
        android:fontFamily="serif"
        android:layout_marginTop="130dp"
        android:ellipsize="middle"
        />
    <Button

        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/science"
        android:layout_marginTop="35dp"
        android:background="#ffffff"
        android:textColor="#000"
        android:text="@string/history"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:shadowRadius="5"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="1"
        android:id="@+id/history"
        android:onClick="hist"
        android:shadowDy="1"
        android:fontFamily="serif"
        android:ellipsize="middle"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/history"
        android:layout_marginTop="35dp"
        android:background="#ffffff"
        android:textColor="#000"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:shadowRadius="5"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="1"
        android:onClick="enter"
        android:id="@+id/enter"
        android:shadowDy="1"
        android:fontFamily="serif"
        android:ellipsize="middle"
        />


</RelativeLayout>
